<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.inmaytide.orbit</groupId>
    <artifactId>orbit</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <name>orbit</name>
    <url>http://maven.apache.org</url>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.5.7.RELEASE</version>
    </parent>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.version>1.0-SNAPSHOT</project.version>
        <spring.data.mybatis.version>1.0.17.RELEASE</spring.data.mybatis.version>
        <shiro.version>1.4.0</shiro.version>
        <common.lang.version>3.6</common.lang.version>
        <poi.version>3.16</poi.version>
    </properties>

    <modules>
        <module>orbit-utils</module>
        <module>orbit-model</module>
        <module>orbit-dao</module>
        <module>orbit-service-api</module>
        <module>orbit-service</module>
        <module>orbit-web-api</module>
        <module>orbit-exception</module>
        <module>orbit-i18n</module>
        <module>orbit-auz</module>
    </modules>

    <repositories>
        <repository>
            <id>spring-milestone</id>
            <url>http://repo.spring.io/milestone/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${common.lang.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.9.0.BETA-6</version>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-i18n</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-auz</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-exception</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-service-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.inmaytide.orbit</groupId>
                <artifactId>orbit-web-api</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.9</source>
                    <target>1.9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>